EDU-1238 Fix AntD radio buttons always wrapping in quick-tester plugin

--- a/src/plugins/quick-tester/quick-tester.less
+++ b/src/plugins/quick-tester/quick-tester.less
@@ -28,6 +28,7 @@
 }
 
 .QuickTesterDisplay-radioGroup {
+  display: flex;
   margin-top: 15px !important;
 }
 
